# auto-video-trimming-export

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: analyze.py  error.py  exe_applescript.py  log.py  main.py  media_info.toml  moviepy_trim.py  ocr.py  setting.toml  trim-quicktime.applescript
