[tool.poetry]
name = "auto-video-trimming-export"
version = "0.2.0"
description = "This project aims to specify the trimming process and automate the export process."
authors = ["7rikaz_h785 <7rikaz.h785.stat2ltas41lcijad@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
opencv-python = "^4.7.0.68"
moviepy = "^1.0.3"
toml = "^0.10.2"
scipy = "^1.10.0"
pytesseract = "^0.3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
